--- a/index.html
+++ b/index.html
@@ -12,41 +12,141 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav style="background-color: rgba(214, 217, 223, 0.596);" class="navbar navbar-expand">
         <div class="container-fluid">
 
           <a class="navbar-brand" href="#">
             <img src="images/logos/brand-logo.png" alt="Bootstrap" width="30" height="24">
           </a>
-          
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">ABOUT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">WORK</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="#">SERVICES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">TESTIMONIALS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+
+        <img src="images/computer.png" alt="Computer" style="width:100vw;">
+        <div class="text-block">
+          <h4>We Design and Develop </h4>
+          <p>
+            We are a new design studio based in USA. We have over  
+            20 years of combined experience, and know a thing or two  
+            about designing websites and mobile apps. 
+            </p>
+            <button class="button">CONTACT US</button>
+            </div>
+            <br>
+            <br>
+            <br>
+      <h1 class="heading">About Us</h1>
+      <h5 style="text-align: center;" class="text"> Divide have don't man wherein air fourth. Own itself make have night won't make. 
+         A you under Seed appear which good give. Own give air without fowl moveth dry first
+          heaven fruit, dominion she'd won't very all. </h5>
+          <center>
+          <img src="images/signature.png" alt="Signature">
+        </center>
+        <br>
+        <br>
+        <br>
+        <div class="row" style="background-color:#F5F5F5;">
+          <br>
+          <br>
+          <div class="col" style="margin: 6%;">
+            <h1 class="heading">Professional Skills </h1>
+            <br>
+            <h5 class="text">UI/UX DESIGN 75% </h5>
+            <div class="progress" style="height:3px;">
+              <div class="progress-bar" role="progressbar" style="width: 75%; background-color: #10c9c3;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
+            <h5 class="text">WEB DEVELOPMENT 90% </h5>
+            <div class="progress" style="height: 3px;">
+              <div class="progress-bar" role="progressbar"  style="width: 90%; background-color: #10c9c3;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
+            <h class="text">MARKETING 65% </h5>
+            <div class="progress" style="height: 3px;">
+              <div class="progress-bar" role="progressbar"  style="width: 65%; background-color: #10c9c3;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
+          </div>
+          <div class="col">
+            <img src="images/notebook.png" alt="study">
+          </div>
+        </div>
+
+        <div class="row" style="background-color: #10c9c3;">
+          <div class="col" style="margin: 4%; margin-top: 8%;">
+
+            <div class="row">
+              <div class="col-1" style="padding-top: 5%;">
+                <img src="images/icons/briefcase.png" alt="case">
+              </div>
+              <div class="col" style="padding-left: 15%;">
+                <p style="color: white;" class="text">584 <br> PROJECT COMPLETED</p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col" style="margin: 4%; margin-top: 8%;">
+            <div class="row">
+              <div class="col-1" style="padding-top: 5%;">
+                <img src="images/icons/clock.png" alt="case">
+              </div>
+              <div class="col" style="padding-left: 15%;">
+                <p style="color: white;" class="text">584 <br> PROJECT COMPLETED</p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col" style="margin: 4%; margin-top: 8%;">
+            <div class="row">
+              <div class="col-1" style="padding-top: 5%;">
+                <img src="images/icons/star.png" alt="case">
+              </div>
+              <div class="col" style="padding-left: 15%;">
+                <p style="color: white;" class="text">584 <br> PROJECT COMPLETED</p>
+              </div>
+            </div>
+
+
+          </div>
+
+
+          <div class="col" style="margin: 4%; margin-top: 8%;">
+            <div class="row">
+              <div class="col-1" style="padding-top: 5%;">
+                <img src="images/icons/heart.png" alt="case">
+              </div>
+              <div class="col" style="padding-left: 15%;">
+                <p style="color: white;" class="text">584 <br> PROJECT COMPLETED</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
