--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link href="scipt.js" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat|Nunito Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">   
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
     <nav style="background-color: rgba(214, 217, 223, 0.596);" class="navbar navbar-expand">
@@ -65,6 +66,7 @@
         <br>
         <br>
         <br>
+        <div style="background-color:#F5F5F5; ;">
         <div class="row" style="background-color:#F5F5F5;">
           <br>
           <br>
@@ -147,7 +149,180 @@
 
 
 
+        <div class="row">
+          <div class="col">
+            <div class="container">
+              <img src="images/Package Design Lemon Tea.png" alt="lemon" class="image">
+              <div class="overlay">
+                <img src="images/icons/hover-icon.png" class="icon" title="User Profile">
+              </div>
+        </div>
+        </div>
 
+
+          <div class="col">
+            <div class="container">
+              <img src="images/Package Design Vanilla Powder .png" alt="Vanilla" class="image">
+              <div class="overlay">
+                <img src="images/icons/hover-icon.png" class="icon" title="User Profile">
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="container">
+              <img src="images/Package Design Coconut.png" alt="Coconut" class="image">
+              <div class="overlay">
+                <img src="images/icons/hover-icon.png" class="icon" title="User Profile">
+              </div>
+            </div>
+          </div>
+
+            <div class="col">
+              <div class="container">
+                <img src="images/Package Design Komaso.png" alt="komaso" class="image">
+                <div class="overlay">
+                  <img src="images/icons/hover-icon.png" class="icon" title="User Profile">
+                </div>
+              </div>
+            </div>
+
+            </div>
+
+        <div class="row">
+          <div class="col">
+            <div class="container">
+              <img src="images/Package Design Spices.png" alt="Spice" class="image">
+              <div class="overlay">
+                <img src="images/icons/hover-icon.png" class="icon" title="User Profile">
+              </div>
+            </div>
+            </div>
+
+            <div class="col">
+              <div class="container">
+                <img src="images/Package Design Salad.png" alt="salad" class="image">
+                <div class="overlay">
+                  <img src="images/icons/hover-icon.png" class="icon" title="User Profile">
+                </div>
+              </div>
+            </div>
+
+              <div class="col">
+                <div class="container">
+                  <img src="images/Package Design Olive Oil.png" alt="Olive" class="image">
+                  <div class="overlay">
+                    <img src="images/icons/hover-icon.png" class="icon" title="User Profile">
+                  </div>
+                </div>
+                </div>
+
+                <div class="col">
+                  <div class="container">
+                    <img src="images/Package Design Seaweed.png" alt="Seaweed" class="image">
+                    <div class="overlay">
+                      <img src="images/icons/hover-icon.png" class="icon" title="User Profile">
+                    </div>
+                  </div>
+                  </div>
+        </div>
+        <br>
+        <br>
+        <br>
+      </div>
+      <br>
+
+      <h1 class="heading">Services</h1>
+
+      <div class="row">
+        <div class="col">
+          <center>
+            <img src="images/icons/diamond.png" style="padding: 8%;">
+            <h6>UI / UX DESIGN</h3>
+            <p class="text">Be set fourth land god darkness make it wherein own </p>
+          </center>
+        </div>
+        <div class="col">
+          <center>
+            <img src="images/icons/arrow.png" style="padding: 8%;">
+            <h6>WEB DEVELOPMENT</h6>
+            <p class="text">A she'd them bring void moving third she'd kind fill  </p>
+          </center>
+        </div>
+        <div class="col">
+          <center>
+            <img src="images/icons/phone.png" style="padding: 8%;">
+            <h6>APP / MOBILE </h6>
+            <p class="text">Dominion man second spirit he, earth they're creeping  </p>
+          </center>
+        </div>
+        <div class="col">
+          <center>
+            <img src="images/icons/game.png" style="padding: 8%;">
+            <h6>GAME DESIGN </h6>
+            <p class="text">Morning his saying moveth it  multiply appear life be </p>
+          </center>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <center>
+            <img src="images/icons/plane.png" style="padding: 8%;">
+            <h6>SEO / MARKETING </h6>
+            <p class="text">Give won't after land fill creeping meat you, may </p>
+          </center>
+        </div>
+        <div class="col">
+          <center>
+            <img src="images/icons/stara.png" style="padding: 8%;">
+            <h6>PHOTOGRAPHY</h6>
+            <p class="text">Creepeth one seas cattle grass give moving saw give </p>
+          </center>
+        </div>
+        <div class="col">
+          <center>
+            <img src="images/icons/wand.png" style="padding: 8%;">
+            <h6>GRAPHIC DESIGN</h6>
+            <p class="text">Open, great whales air rule for, fourth life whales </p>
+          </center>
+        </div>
+        <div class="col">
+          <center>
+            <img src="images/icons/paint.png" style="padding: 8%;">
+            <h6>ILLUSTRATIONS</h6>
+            <p class="text">Whales likeness hath, man kind for them air two won't </p>
+          </center>
+        </div>
+      </div>
+
+      <div class="row" style="background-color: #10c9c3; color:white; padding: 10%;">
+        <center>
+          <h4 class="text">“Outstanding job and exceeded all expectations. It was a pleasure to work with
+            them on a sizable first project and am looking forward to start the next one asap.” </h4>
+            <h6>MICHAEL HOPKINS</h6>
+        </center>
+      </div>
+
+      <div class="row">
+        <div style="padding: 5%;" class="col">
+          <img src="images/logos/logo-01.png">
+        </div>
+        <div style="padding: 5%;" class="col">
+          <img src="images/logos/logo-02.png">
+        </div>
+        <div style="padding: 5%;" class="col">
+          <img src="images/logos/logo-03.png">
+        </div>
+        <div style="padding: 5%;" class="col">
+          <img src="images/logos/logo-04.png">
+        </div>
+        <div style="padding: 5%;" class="col">
+          <img src="images/logos/logo-05.png">
+        </div>
+      </div>
+
+
+      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
