--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="container-fluid">
 
           <a class="navbar-brand" href="#">
-            <img src="images/logos/brand-logo.png" alt="Bootstrap" width="30" height="24">
+            <img src="images/logos/brand-logo.png"  style="margin-left: 50% ;" alt="Bootstrap" width="30" height="24">
           </a>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link active" style="color: #10c9c3;" aria-current="page" href="#">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">ABOUT</a>
@@ -51,7 +51,9 @@
             20 years of combined experience, and know a thing or two  
             about designing websites and mobile apps. 
             </p>
-            <button class="button">CONTACT US</button>
+            <a href ="#contact">
+            <button class="button"  >CONTACT US</button>
+          </a>
             </div>
             <br>
             <br>
@@ -329,7 +331,7 @@
     </div>
 
     <div id="contact">
-<div style="background-color: #F5F5F5; padding: 8%;" class="row" >
+<div style="background-color: #F5F5F5; padding-left: 18%; padding-right: 18%;" class="row" >
       <div class="container">
         <form action="action_page.php">
           <h1 style="text-align: center;" class="heading">Need a Project?</h1>
@@ -355,7 +357,7 @@
       </div>
     </div>
   </div>
-
+  
   <div style="background-color: #141414; padding: 5%;" class="row">
     <div style="padding: 5%;" class="col">
       <h4 class="footer">Piroll Design, Inc. </h4>
@@ -405,7 +407,7 @@
 </div>
 
   </div>
-      
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
