--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <div class="progress-bar" role="progressbar"  style="width: 90%; background-color: #10c9c3;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
-            <h class="text">MARKETING 65% </h5>
+            <h5 class="text">MARKETING 65% </h5>
             <div class="progress" style="height: 3px;">
               <div class="progress-bar" role="progressbar"  style="width: 65%; background-color: #10c9c3;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
