--- a/about.html
+++ b/about.html
@@ -42,8 +42,7 @@
       <h1 style="text-align: center;">About Me</h1>
       <div class="row">
         <div class="col">
-            <img src="stationary/Bluebird_1.jpg" style="width:100%; max-height: 500px; max-width: 400px; margin-left: 10%;">
-        <p style="font-size: xx-small; padding-left: 15%;">Hand-drawn by Monika Natius</p>
+            <img src="mom.jpeg" style="width:100%; max-height: 500px; max-width: 400px; margin-left: 10%;">
         </div>
         <div class="col">
             <p style="margin-right: 15%; padding: 5%;"> <span style="font-size: larger; font-weight:600;">Hello, my name is Monika Natius.</span> <br>Welcome to my Portfolio!
@@ -91,23 +90,27 @@ be competent in various work environments, and I am always eager to take on new 
       <div class="row">
         <div class="col">
           <div class="footer">
-            <p href = "about.html">About</p>
-            <p href = "gallery.html">Gallery</p>
-            <p href="contact.html">Contact</p>
-            
+            <a style="color: white; text-decoration: none;" href = "about.html">About</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href = "gallery.html">Gallery</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href="contact.html">Contact</a>
+
           </div>
         </div>
-
         <div class="col">
 
           <div class="footer">
-            <p href="?">Instagram</p>
-            <p href="?">Facebook</p>
-            <p href="?">LinkedIn</p>
+            <br>
+<br>
+            <a style="color: white; text-decoration: none;" href="https://www.instagram.com/www_littledovedesign/?hl=en">Instagram</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href="https://www.linkedin.com/in/monikanatius">LinkedIn</a>
           </div>
         </div>
 
     </div>
+</div>
 </div>
 
 
