--- a/gallery.html
+++ b/gallery.html
@@ -94,7 +94,7 @@
 </div>
   </div>
 </div>
-
+<center>
 <div class="container" style="margin: 5%; ">
     <a href="Personal.html">
   <img src="Personal/Final_IndianPainting_lowRes.jpg" class="image" >
@@ -103,6 +103,7 @@
   </div>
   </a>
 </div>
+</center>
 <br>
 <br>
 <br>
@@ -122,23 +123,27 @@
       <div class="row">
         <div class="col">
           <div class="footer">
-            <p href = "about.html">About</p>
-            <p href = "gallery.html">Gallery</p>
-            <p href="contact.html">Contact</p>
-            
+            <a style="color: white; text-decoration: none;" href = "about.html">About</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href = "gallery.html">Gallery</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href="contact.html">Contact</a>
+
           </div>
         </div>
-
         <div class="col">
 
           <div class="footer">
-            <p href="?">Instagram</p>
-            <p href="?">Facebook</p>
-            <p href="?">LinkedIn</p>
+            <br>
+<br>
+            <a style="color: white; text-decoration: none;" href="https://www.instagram.com/www_littledovedesign/?hl=en">Instagram</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href="https://www.linkedin.com/in/monikanatius">LinkedIn</a>
           </div>
         </div>
 
     </div>
+</div>
 </div>
 
 
