--- a/Stationary.html
+++ b/Stationary.html
@@ -221,7 +221,7 @@
 </div>
 
     
-      <div style="background-color: #141414; padding: 5%;" class="row">
+        <div style="background-color: #141414; padding: 5%;" class="row">
     <div style="padding: 5%;" class="col">
       <h4 class="footer">Monika Natius </h4>
       <p class="footer">
@@ -237,26 +237,28 @@
       <div class="row">
         <div class="col">
           <div class="footer">
-            <p href = "about.html">About</p>
-            <p href = "gallery.html">Gallery</p>
-            <p href="contact.html">Contact</p>
-            
+            <a style="color: white; text-decoration: none;" href = "about.html">About</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href = "gallery.html">Gallery</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href="contact.html">Contact</a>
+
           </div>
         </div>
-
         <div class="col">
 
           <div class="footer">
-            <p href="?">Instagram</p>
-            <p href="?">Facebook</p>
-            <p href="?">LinkedIn</p>
+            <br>
+<br>
+            <a style="color: white; text-decoration: none;" href="https://www.instagram.com/www_littledovedesign/?hl=en">Instagram</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href="https://www.linkedin.com/in/monikanatius">LinkedIn</a>
           </div>
         </div>
 
     </div>
 </div>
-
-  </div>
+</div>
   <script src="scipt.js"></script>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
