--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 
 <br>
 <br>
-  <div style="background-color: #141414; padding: 5%;" class="row">
+    <div style="background-color: #141414; padding: 5%;" class="row">
     <div style="padding: 5%;" class="col">
       <h4 class="footer">Monika Natius </h4>
       <p class="footer">
@@ -75,25 +75,28 @@
       <div class="row">
         <div class="col">
           <div class="footer">
-            <p href = "about.html">About</p>
-            <p href = "gallery.html">Gallery</p>
-            <p href="contact.html">Contact</p>
-            
+            <a style="color: white; text-decoration: none;" href = "about.html">About</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href = "gallery.html">Gallery</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href="contact.html">Contact</a>
+
           </div>
         </div>
-
         <div class="col">
 
           <div class="footer">
-            <p href="?">Instagram</p>
-            <p href="?">Facebook</p>
-            <p href="?">LinkedIn</p>
+            <br>
+<br>
+            <a style="color: white; text-decoration: none;" href="https://www.instagram.com/www_littledovedesign/?hl=en">Instagram</a>
+            <br>
+            <a style="color: white; text-decoration: none;" href="https://www.linkedin.com/in/monikanatius">LinkedIn</a>
           </div>
         </div>
 
     </div>
 </div>
-
+</div>
 
 
   <script src="scipt.js"></script>
