--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     <nav style="background-color: rgba(214, 217, 223, 0.596);" class="navbar navbar-expand">
         <div class="container-fluid">
 
-          <a class="navbar-brand" href="#">
-            <img src="images/logos/brand-logo.png"  style="margin-left: 50% ;" alt="Bootstrap" width="30" height="24">
+          <a class="navbar-brand" href="index.html">
+            <img src="logo.png"  style="margin-left: 50% ;" alt="Bootstrap" width="70" height="50">
           </a>
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -40,9 +40,11 @@
       <br>
 
       <h1 style="text-align: center;">About Me</h1>
+      <br>
+      <br>
       <div class="row">
         <div class="col">
-            <img src="mom.jpeg" style="width:100%; max-height: 500px; max-width: 400px; margin-left: 10%;">
+            <img src="mom.jpeg" style="width:100%; max-height: 500px; max-width: 400px; margin-left: 10%; padding: 5%;">
         </div>
         <div class="col">
             <p style="margin-right: 15%; padding: 5%;"> <span style="font-size: larger; font-weight:600;">Hello, my name is Monika Natius.</span> <br>Welcome to my Portfolio!
