--- a/Marketing.html
+++ b/Marketing.html
@@ -16,8 +16,8 @@
     <nav style="background-color: rgba(214, 217, 223, 0.596);" class="navbar navbar-expand">
         <div class="container-fluid">
 
-          <a class="navbar-brand" href="#">
-            <img src="images/logos/brand-logo.png"  style="margin-left: 50% ;" alt="Bootstrap" width="30" height="24">
+          <a class="navbar-brand" href="index.html">
+            <img src="logo.png"  style="margin-left: 50% ;" alt="Bootstrap" width="70" height="50">
           </a>
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -153,7 +153,7 @@
 
     <div class="mySlides">
       <div class="numbertext">2 / 20</div>
-      <img src="Marketing/pencilRevlon.jpg" style="width:100%;">
+      <img src="Marketing/AlmayFoundation.jpg" style="width:100%;">
     </div>
 
     <div class="mySlides">
