--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container-fluid">
 
           <a class="navbar-brand" href="index.html">
-            <img src="logo.png"  style="margin-left: 50% ;" alt="Bootstrap" width="70" height="50">
+            <img src="logo.png"  style="margin-left: 50% ;" width="70" height="50">
           </a>
             <ul class="navbar-nav">
               <li class="nav-item">
