--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
   <div class="col">
 <div class="container" style="margin: 5%; ">
-  <img src="Stationary/YellowBird.jpg" href="Stationary.html" class="image" >
+  <img src="stationary/Bluebird_1.jpg" href="Stationary.html" class="image" >
   <div class="overlay">
     <div class="words">Stationary</div>
   </div>
